('GSM' is Greg Sabino Mullane, greg@turnstep.com)

2.2.2 Released March 3, 2008 (subversion r10873)

	- Remove non-working tracing from types.c and quote.c

	- Add parse_trace_flag as statement handle method.

2.2.1 Released March 1, 2008 (subversion r10865)

	- Fixed memory leaks in dbdimp.c (CPAN bug #33743)
		[Alexey Tourbin]
	- Fixed strlen problems in dbdimp.c (CPAN bug #33737)
		[Alexey Tourbin]
	- Fixed char count in Renew() (CPAN bug #33738)
		[Alexey Tourbin]
	- Change local trace_flags to lowercase.

2.2.0 Released February 27, 2008 (subversion r10849)

	- Introduced enhanced trace flags. See the documentation 
		 on parse_trace_flags() for details. [GSM]
	- Remove version.pm dependency from Makefile.PL
		(CPAN bug #33429)

2.1.3 Released February 20, 2008 (subversion r10813)

	- Do not assume POSTGRES_LIB is a plain dirname, as it may have " -lssl".

2.1.2 Released February 19, 2008 (subversion r10806)

	- Do not build if environment variables POSTGRES_HOME, POSTGRES_LIB, 
		or POSTGRES_INCLUDE are set but not valid.
	- Fix dependency requirements, especially version.pm

2.1.1 Released February 19, 2008 (subversion r10798)

	- Better URLs to cpan.org resources.

2.1.0 Released February 18, 2008 (subversion r10793)

	- Use version.pm [CPAN bug #33206] [GSM]
	- Add PERL_NO_GET_CONTEXT #define to improve performance on threaded Perls
	- Raise the minimum DBI version to 1.52.
	- Allow arrayrefs into bind_col (CPAN bug #33193) [GSM]
	- Remove '//' style comments to make strict ANSI compilers happy.
		(Trevor Inman) [CPAN bug #33089]
	- Force client encoding of UTF8 for some tests.
	- Make 03dbmethod.t pass minor test for version 8.1.9
		[CPAN bug #33282]
	- Add a local copy of dbivport.h

2.0.0 Released February 10, 2008 (subversion r10715)

Major changes:

	- Make minimum supported server 7.4. [GSM]
	- Overhaul COPY functions: deprecate pg_getline, pg_putline, 
		and pg_endcopy. The new functions are pg_getcopydata, 