@@ -1,5 +1,9 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
+???
+
+	- Fix broken fetch of $sth->{pg_segments} [GSM]
+
 2.2.2 Released March 3, 2008 (subversion r10873)
 
 	- Remove non-working tracing from types.c and quote.c
